Fixed buttons on iPhone (CSS addition). Moved hidden <input> to be sibling of <button> instead of child (for better HTML compliance).

--- a/RemoteDemoControl/Content/Site.css
+++ b/RemoteDemoControl/Content/Site.css
@@ -357,6 +357,7 @@ div#title {
     overflow: visible;
     padding: 0;
     margin: 0;
+    -webkit-appearance: none;
 }
 
 .demoTitle
